fix top-nav to have no opacity on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -271,16 +271,12 @@ button {
 }
 
 .topnav {
-  /* background-color: rgb(67, 67, 67); */
   background-color: rgba(36, 16, 37, 0.7);
   padding: 5px;
   position: absolute;
   right: 1em;
   top: 0.5em;
   text-align: right;
-  /* align-items: right; */
-  /* backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(5px); */
   a {
     color: #fff7e5;
   }
@@ -300,6 +296,10 @@ a.nav-heading {
 @media (max-width: 600px) {
   body {
     font-size: 13pt;
+  }
+
+  .topnav {
+    background-color: rgba(36, 16, 37, 1);
   }
 
   .container {
